Refactor HTML structure and styles for clarity

--- a/index.html
+++ b/index.html
@@ -1,174 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quant AI Terminal</title>
-    <style>
-        body {
-            font-family: Arial;
-            background-color: #0f172a;
-            color: white;
-            padding: 30px;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 10px;
-        }
-
-        .section-title {
-            margin-top: 40px;
-            font-size: 22px;
-        }
-
-        .top-bar {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-        select, input {
-            padding: 10px;
-            border-radius: 6px;
-            border: none;
-        }
-
-        button {
-            padding: 10px 20px;
-            background: #2563eb;
-            border: none;
-            color: white;
-            border-radius: 6px;
-            cursor: pointer;
-        }
-
-        .card {
-            background: #1e293b;
-            padding: 25px;
-            border-radius: 12px;
-            margin-bottom: 25px;
-        }
-
-        .score {
-            font-size: 70px;
-            text-align: center;
-            font-weight: bold;
-        }
-
-        .gauge-container {
-            height: 18px;
-            background: #334155;
-            border-radius: 10px;
-            margin: 15px 0;
-            overflow: hidden;
-        }
-
-        .gauge-bar {
-            height: 100%;
-            width: 0%;
-            transition: width 0.8s ease;
-        }
-
-        .grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-            margin-top: 20px;
-        }
-
-        .watchlist-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 15px;
-            margin-top: 15px;
-        }
-
-        .watch-card {
-            background: #1e293b;
-            padding: 15px;
-            border-radius: 8px;
-            text-align: center;
-            cursor: pointer;
-        }
-
-        canvas {
-            margin-top: 20px;
-            background: #0f172a;
-            border-radius: 8px;
-        }
-
-        .heatmap {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 8px;
-            margin-top: 15px;
-        }
-
-        .heat-cell {
-            padding: 15px;
-            text-align: center;
-            border-radius: 6px;
-        }
-
-        textarea {
-            width: 100%;
-            background: #0f172a;
-            color: white;
-            border: none;
-            padding: 10px;
-            border-radius: 6px;
-            height: 100px;
-        }
-
-    </style>
+<title>Quant AI Terminal</title>
+<style>
+body {
+    font-family: Arial;
+    background-color: #0f172a;
+    color: white;
+    padding: 30px;
+}
+.card {
+    background: #1e293b;
+    padding: 25px;
+    border-radius: 12px;
+    margin-bottom: 25px;
+}
+.score {
+    font-size: 70px;
+    text-align: center;
+    font-weight: bold;
+}
+.watchlist-grid, .heatmap {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 15px;
+}
+.watch-card, .heat-cell {
+    background: #1e293b;
+    padding: 15px;
+    border-radius: 8px;
+    text-align: center;
+    cursor: pointer;
+}
+canvas {
+    margin-top: 20px;
+    background: #0f172a;
+    border-radius: 8px;
+}
+</style>
 </head>
 <body>
 
 <h1>Quant AI Terminal</h1>
 
-<div class="top-bar">
-    <select id="presetStocks" onchange="analyze()">
-        <option value="">Select Stock</option>
-        <option value="AAPL">AAPL</option>
-        <option value="MSFT">MSFT</option>
-        <option value="NVDA">NVDA</option>
-        <option value="TSLA">TSLA</option>
-        <option value="AMZN">AMZN</option>
-        <option value="GOOGL">GOOGL</option>
-        <option value="META">META</option>
-        <option value="SPY">SPY</option>
-    </select>
-    <input id="ticker" placeholder="Or enter ticker">
-    <button onclick="analyze()">Analyze</button>
-</div>
+<select id="presetStocks" onchange="analyze()">
+<option value="">Select Stock</option>
+<option value="AAPL">AAPL</option>
+<option value="MSFT">MSFT</option>
+<option value="NVDA">NVDA</option>
+<option value="TSLA">TSLA</option>
+<option value="AMZN">AMZN</option>
+<option value="GOOGL">GOOGL</option>
+<option value="META">META</option>
+<option value="SPY">SPY</option>
+</select>
+
+<button onclick="analyze()">Analyze</button>
 
 <div id="mainPanel"></div>
-
-<div class="section-title">Watchlist Overview</div>
+<h2>Watchlist Overview</h2>
 <div id="watchlist" class="watchlist-grid"></div>
-
-<div class="section-title">Sector Heatmap</div>
+<h2>Sector Heatmap</h2>
 <div id="heatmap" class="heatmap"></div>
-
-<div class="section-title">Portfolio Score</div>
 <div id="portfolioPanel"></div>
 
 <script>
 
 const backend = "https://quant-ai-backend-production.up.railway.app";
 const watchTickers = ["AAPL","MSFT","NVDA","TSLA","AMZN","GOOGL","META","SPY"];
-let autoRefresh = true;
 
-// ============================
 // MAIN ANALYSIS
-// ============================
-
 async function analyze(tickerOverride=null) {
 
-    let tickerInput = document.getElementById("ticker").value.trim();
     let preset = document.getElementById("presetStocks").value;
-    let ticker = tickerOverride || (tickerInput !== "" ? tickerInput : preset);
-
+    let ticker = tickerOverride || preset;
     if (!ticker) return;
 
     const res = await fetch(`${backend}/analyze/${ticker}`);
@@ -177,90 +82,23 @@ async function analyze(tickerOverride=null) {
     renderMainPanel(data);
 }
 
-// ============================
-// MAIN PANEL RENDER
-// ============================
-
 function renderMainPanel(data) {
-
-    let color = "#facc15";
-    if (data.signal_score > 60) color = "#22c55e";
-    if (data.signal_score < 40) color = "#ef4444";
 
     document.getElementById("mainPanel").innerHTML = `
         <div class="card">
-
-            <h2 style="text-align:center;">${data.ticker}</h2>
-
-            <div class="score" style="color:${color}">
-                ${data.signal_score.toFixed(1)}
-            </div>
-
-            <div class="gauge-container">
-                <div class="gauge-bar"
-                     style="background:${color};
-                            width:${data.signal_score}%;">
-                </div>
-            </div>
-
-            <div style="text-align:center;">
-                ${data.signal_label} | 
-                ${data.trend_regime} | 
-                ${data.volatility_regime}
-            </div>
-
-            <div class="grid">
-                <div>Price</div><div>$${data.last_price.toFixed(2)}</div>
-                <div>Prob Up</div><div>${(data.probability_upside*100).toFixed(1)}%</div>
-                <div>Sharpe</div><div>${data.sharpe_ratio.toFixed(2)}</div>
-                <div>RSI</div><div>${data.rsi.toFixed(1)}</div>
-            </div>
-
+            <h2>${data.ticker}</h2>
+            <div class="score">${data.signal_score.toFixed(1)}</div>
+            <div>${data.signal_label} | ${data.trend_regime}</div>
             <canvas id="mcChart" width="800" height="250"></canvas>
-
-            <div class="section-title">AI Explanation</div>
-            <textarea readonly>
-${generateExplanation(data)}
-            </textarea>
-
         </div>
     `;
 
-    drawMonteCarlo(data.simulations);
+    if (data.simulations) {
+        drawMonteCarlo(data.simulations);
+    }
 }
 
-// ============================
-// AI EXPLANATION
-// ============================
-
-function generateExplanation(d) {
-
-    let explanation = "";
-
-    if (d.signal_score > 70)
-        explanation += "Strong momentum and positive trend alignment. ";
-    else if (d.signal_score < 40)
-        explanation += "Weak structure with bearish indicators. ";
-    else
-        explanation += "Mixed signals with moderate conviction. ";
-
-    if (d.rsi < 30)
-        explanation += "RSI indicates oversold conditions. ";
-    if (d.rsi > 70)
-        explanation += "RSI indicates overbought conditions. ";
-
-    if (d.trend_regime === "Uptrend")
-        explanation += "Long-term moving averages confirm uptrend. ";
-    if (d.trend_regime === "Downtrend")
-        explanation += "Long-term moving averages confirm downtrend. ";
-
-    return explanation;
-}
-
-// ============================
-// MONTE CARLO
-// ============================
-
+// REDUCED DRAW LOAD
 function drawMonteCarlo(simulations) {
 
     const canvas = document.getElementById("mcChart");
@@ -269,7 +107,7 @@ function drawMonteCarlo(simulations) {
 
     ctx.strokeStyle = "rgba(34,197,94,0.15)";
 
-    simulations.slice(0,100).forEach(path => {
+    simulations.slice(0,40).forEach(path => {
         ctx.beginPath();
         path.forEach((price,i)=>{
             let x = (i/path.length)*canvas.width;
@@ -281,46 +119,44 @@ function drawMonteCarlo(simulations) {
     });
 }
 
-// ============================
-// WATCHLIST + HEATMAP
-// ============================
-
+// PARALLEL WATCHLIST LOAD
 async function loadWatchlist() {
 
-    let totalScore = 0;
+    const promises = watchTickers.map(t =>
+        fetch(`${backend}/analyze/${t}?lite=true`)
+            .then(r=>r.json())
+    );
 
+    const results = await Promise.all(promises);
+
+    let totalScore = 0;
     document.getElementById("watchlist").innerHTML = "";
     document.getElementById("heatmap").innerHTML = "";
 
-    for (let t of watchTickers) {
-
-        const res = await fetch(`${backend}/analyze/${t}`);
-        const d = await res.json();
+    results.forEach((d,i)=>{
 
         totalScore += d.signal_score;
+        let t = watchTickers[i];
 
         let color = "#facc15";
         if (d.signal_score > 60) color = "#22c55e";
         if (d.signal_score < 40) color = "#ef4444";
 
         document.getElementById("watchlist").innerHTML += `
-            <div class="watch-card"
-                 onclick="analyze('${t}')">
+            <div class="watch-card" onclick="analyze('${t}')">
                 ${t}<br>
-                <span style="color:${color};
-                             font-weight:bold;">
+                <span style="color:${color}; font-weight:bold;">
                 ${d.signal_score.toFixed(0)}
                 </span>
             </div>
         `;
 
         document.getElementById("heatmap").innerHTML += `
-            <div class="heat-cell"
-                 style="background:${color}">
+            <div class="heat-cell" style="background:${color}">
                 ${t}<br>${d.signal_score.toFixed(0)}
             </div>
         `;
-    }
+    });
 
     let avgScore = totalScore / watchTickers.length;
 
@@ -334,17 +170,8 @@ async function loadWatchlist() {
 
 loadWatchlist();
 
-// ============================
-// AUTO REFRESH
-// ============================
-
-setInterval(()=>{
-    if(autoRefresh){
-        loadWatchlist();
-    }
-}, 60000);
-
 </script>
 
 </body>
 </html>
+
